tests/baselines/reference/functionOverloads1.errors.txt
==== tests/cases/compiler/functionOverloads1.ts (1 errors) ====
    function foo();
    1+1;
    ~
!!! functionOverloads1.ts(2,1): error TS2238: Function implementation expected.
    function foo():string { return "a" }